# faridlib

./: README.md  pyproject.toml
faridlib/: machine_learning.py
